# mtg

./: .gitignore  AGENT_ONBOARDING.md  README.md  deck_3948_features.txt  pyproject.toml
.claude/: settings.local.json
demo/: README.md  app.js  index.html  styles.css
documents/: action_plan.md  archidekt_pipeline.md  backbone.md  demo.md  divergence_report.md  phase_a_report.md  preprocessing_report.md  rclone_drive_setup.md  spot_check_results.md
documents/paper/: article_structure_plan.md
documents/paper/src/: main.aux  (+8 more)
documents/presentation/: beamerthemeInf.sty  macros.sty  presentation.aux  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.tex  presentation.toc  speaker_notes.md
documents/reports/: enunciado_a_to_j_coverage_audit.md  phase_e_reaudit.md  phase_e_to_j_audit.md
documents/sample_reports/: README.md  deck_315586.md  deck_5687434.md  deck_8605733.md  sanity_check_phase_a.md  sanity_check_phase_a_run4.md  sixteen_mismatched_decklists.md
experiments/: best_models.json  folds.json  nested_cv_summary.json  pipeline_run_manifest.json  seeds.json  statistical_tests.json
experiments/archives/: experiments_manifest.json
experiments/bc_decision_tree/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/bc_gradient_boosting/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/bc_linear_svc/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/bc_logistic_regression/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/bc_naive_bayes/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/bc_random_forest/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/df_decision_tree/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/df_gradient_boosting/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/df_linear_svc/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/df_logistic_regression/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/df_naive_bayes/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/df_random_forest/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics_per_fold.json
experiments/mock_knn/: best_hyperparams_per_fold.json  checkpoint_state.json  cv_results_per_fold.jsonl  metrics.json  predictions_per_fold.jsonl
experiments/model_verification/: group_kfold_results.json
experiments/phase_j_interpretability/: bc_card_lift_per_class.json  bc_divergence_cards.json  df_divergence_features.json  df_permutation_importance.json  final_model_params.json
experiments/spot_check/: combinations.jsonl  results.jsonl  summary.json
presentation/: biblio.bib  plan.md  presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.tex  presentation.toc
scripts/: __init__.py  build_features.py  demo.py  download_archidekt_processed.py  download_archidekt_raw.py  edhpowerlevel_client.py  fetch_archidekt_raw.py  fix_default_state_y2.py  phase_b_eda_divergence.py  phase_c_filter_dataset.py  phase_d_spot_check.py  phase_e_nested_cv.py  phase_f_model_verification.py  phase_g_voting.py  phase_h_best_models.py  phase_i_model_vs_calculator.py  phase_j_interpretability.py  preprocessing.py  process_archidekt_raw.py  refresh_edhpowerlevel_labels.py  run_pipeline.py  sanity_check_phase_a.py  sync_experiments_drive.py  validate_edhpowerlevel_labels.py
tests/: test_archidekt_pipeline.py  test_phase_c_preprocessing.py  test_phase_e_nested_cv.py  test_run_pipeline.py  test_sync_experiments_drive.py
(+405 files in other folders)
