[project]
name = "mtg-archidekt-pipeline"
version = "0.1.0"
description = "Two-stage Archidekt Commander deck extraction and processing pipeline."
readme = "documents/backbone.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.59.0",
]

[project.scripts]
fetch-archidekt-raw = "scripts.fetch_archidekt_raw:main"
process-archidekt-raw = "scripts.process_archidekt_raw:main"
build-archidekt-features = "scripts.build_features:main"
restore-archidekt-raw = "scripts.download_archidekt_raw:main"
restore-archidekt-processed = "scripts.download_archidekt_processed:main"
validate-edhpowerlevel-labels = "scripts.validate_edhpowerlevel_labels:main"
refresh-edhpowerlevel-labels = "scripts.refresh_edhpowerlevel_labels:main"
sanity-check-phase-a = "scripts.sanity_check_phase_a:main"
fix-default-state-y2 = "scripts.fix_default_state_y2:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.uv]
package = true
